# AI201-Project-3

./: .gitignore  LABELING_RUBRIC.md  README.md  ai201_project3_takemeter_starter_clean.ipynb  app.py  planning.md  pyproject.toml  scrape_hn.py
data/: hn_dataset.csv  hn_dataset_balanced.csv  hn_dataset_prelabeled.csv  hn_dataset_v3.csv  hn_dataset_v3_full.csv  hn_jokes_candidates.csv  hn_jokes_candidates_p2.csv  prototype_examples_synthetic.csv
notebooks/: ai201_project3_takemeter_starter_clean.ipynb  evaluation_results.json
scripts/: label_jokes_p2.py  merge_joke_supplement.py  scrape_hn_jokes.py
